--- a/pages/templates/pages/profile.html
+++ b/pages/templates/pages/profile.html
@@ -92,45 +92,12 @@
           <div class="photo">
             <img
               class="logo_JF"
-              src="{% static 'img/profile.png' %}"
+              src="{% static 'assets/profile.png' %}"
               alt="Logo da Justiça federal"
             />
           </div>
         </div>
       </section>
-      <div class="footer">
-        <div class="localizacao">
-          <h2>Rua 19, nº 244, Centro</h2>
-
-          <ul class="info">
-            <li class="info-item">
-              <strong>CEP:</strong> 74030-090 Goiânia/GO
-            </li>
-            <li class="info-item"><strong>Telefone:</strong> (62) 3226-1500</li>
-            <li class="info-item"><strong>CNPJ:</strong> 05.439.950/0001-30</li>
-          </ul>
-        </div>
-
-        <div class="line"></div>
-
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d244622.50368607216!2d-49.53920458466345!3d-16.665539375156392!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x935ef17cabdf4161%3A0xc5a966b9b525c720!2sJusti%C3%A7a%20Federal%20-%20R.%2019%2C%20244%20-%20St.%20Central%2C%20Goi%C3%A2nia%20-%20GO%2C%2074030-090!3m2!1d-16.6779242!2d-49.253507199999994!5e0!3m2!1spt-PT!2sbr!4v1753813672968!5m2!1spt-PT!2sbr"
-          width="440"
-          height="124"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
-
-        <div class="line"></div>
-
-        <img
-          class="logo_footer"
-          src="{% static 'assets/JF_logo-md.png' %}"
-          alt="Logo da Justiça federal"
-        />
-      </div>
     </main>
     <footer class="footer-info">
       <p>&copy; <strong>2025 SJGO</strong> •Todos os direitos reservadoos•</p>
