--- a/pages/static/css/home.css
+++ b/pages/static/css/home.css
@@ -266,155 +266,375 @@ input[type="file"] {
   align-items: center;
   flex-direction: column;
   background-color: aliceblue;
-  margin: 40px;
   width: 95%;
   border: 1px solid #00589b30;
+  border-radius: 7px;
+  margin-top: 20px;
+  overflow: hidden;
 }
 
-.contract-labels,
-.contract-card {
+.contract-labels {
   display: grid;
-  grid-template-columns: 1fr 3.75fr 3.25fr 2.75fr 1.25fr 1.75fr 1.6fr 1fr 1fr;
+  grid-template-columns: 1fr 2.75fr 2.25fr 1.75fr 1.25fr 1.75fr 1fr 1.6fr 1.6fr 0.3fr;
   gap: 26px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   font-family: "Roboto", sans-serif;
   padding: 9px 18px;
   border-bottom: 1px solid #00589b30;
 }
 
-.contract-card h3 {
-  width: 200px;
-}
-
-.width {
-  width: 200px;
-}
-
-.btn-edit-icon{
-  border: none;
-  background-color: transparent;
-  width: 27px;
-}
-
-.btn-edit-icon:hover{
-  color: #f7f7f7;
-  background-color: #00579b;
-  padding: 6px;
-  border-radius: 50%;
-}
-
-.contract-edit-top{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.contract-edit-top i{
-  font-size: 30px;
-  padding: 0px 20px 0px 0px;
-}
-.contract-edit-top i:hover{
-  color: #00579b;
-}
-
-.edit-contracts {
-  display: none;
-  justify-content: start;
-  flex-direction: column;
-  position: absolute;
-  width: 1000px;
-  background-color: aliceblue;
-  border: 1px solid #00589b30;
-  border-radius: 10px;
-  padding: 20px;
-  gap: 20px;
-  font-family: "Roboto", sans-serif;
-  box-shadow: 0px 0px 20px #c1c1c1;
-}
-
-
-.edit-card {
-  display: flex;
-  flex-wrap: wrap;
+.contract-card {
+  display: grid;
+  grid-template-columns: 1fr 2.75fr 2.25fr 1.75fr 1.25fr 1.75fr 1fr 1.6fr 1.6fr 0.3fr;
+  gap: 26px;
   align-items: center;
   justify-content: center;
   width: 100%;
-  gap: 20px;    
-  justify-content: start;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  border-bottom: 1px solid #00589b30;
+  padding: 9px 18px;
+}
+
+.contract-card svg {
+  cursor: pointer;
+}
+
+.edit-icon {
+  display: flex;
   align-items: center;
+  justify-content: center;
+  padding: 7px;
+  border-radius: 8px;
+  transition: background-color 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.edit-icon:hover {
+  background-color: #7ec7ff67;
+}
+
+.contract-edit {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.8);
+  width: 1280px;
+  height: 680px;
+  opacity: 0;
+  pointer-events: none;
+  background: #f7f7f7;
+  padding: 32px;
+  border-radius: 12px;
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+  z-index: 997;
+  transition: transform 0.25s ease, opacity 0.25s ease;
+  overflow-y: auto;
+  scrollbar-width: 6px;
+  scrollbar-color: #888 transparent;
+}
+
+.contract-edit::-webkit-scrollbar {
+  width: 6px;
+}
+
+.contact-edit::-webkit-scrollbar-track {
+  background: transparent;
+  padding: 20px 0;
+}
+
+.contract-edit::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+  border: 3px solid transparent;
+  background-clip: content-box;
+}
+
+.contract-edit::-webkit-scrollbar-thumb:hover {
+  background: #777;
+  background-clip: content-box;
+}
+
+.contract-edit-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.25s ease;
+  z-index: 996;
+}
+
+.contract-edit.active {
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+  pointer-events: auto;
+}
+
+.contract-edit-overlay.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.close-contract-edit {
+  border: none;
+  border-radius: 6px;
+  background: transparent;
+  cursor: pointer;
+}
+
+.close-contract-edit svg {
+  stroke: #333;
+  transition: stroke 0.4s ease;
+}
+
+.close-contract-edit:hover svg {
+  stroke: #00579b;
+}
+
+.contract-edit-top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contract-form {
+  width: 100%;
+  height: 100%;
+  margin-top: 16px;
+}
+
+.contract-form h4 {
+  font-size: 18px;
+  margin-bottom: 6px;
+}
+
+.form-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 12px;
+}
+
+.form-management {
+  margin-top: 18px;
 }
 
 .contract-form-card {
   display: flex;
-  justify-content: start;
-  align-items: start;
   flex-direction: column;
-  background-color: #f7f7f7;
-  border: 1px solid #00579b;
-  border-radius: 8px;
+  gap: 6px;
   padding: 10px;
-  width: 300px;
-  gap: 5px;
+  height: 86px;
+  background-color: aliceblue;
+  border: 1px solid #00589b30;
+  border-radius: 10px;
+  overflow: visible;
 }
 
-.warning{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: red;
+.contract-form-card label,
+.contract-form-card h5 {
   font-size: 15px;
-  gap: 5px;
+  font-weight: 600;
 }
 
 .contract-form-card input,
-.contract-form-card select,
-.contract-form-card textarea {
+.contract-form-card textarea,
+.contract-form-card select {
+  width: 100%;
+  padding: 5px;
+  background-color: #f7f7f7;
+  border: 1px solid #00579b;
+  border-radius: 7px;
+  resize: none;
+  font-family: "Roboto", sans-serif;
+}
+
+.contact-info-card {
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -35%);
+  width: 416px;
+  background-color: #f7f7f7;
+  border-radius: 10px;
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+  padding: 16px;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+  z-index: 999;
+}
+
+.contact-info-card.active {
+  transform: translate(-50%, -50%);
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.contact-info-card label {
+  font-size: 13px;
+}
+
+.contact-info-card input {
+  margin-top: 3px;
+}
+
+.contact-info-overlay {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.25s ease;
+  z-index: 996;
+}
+
+.contact-info-overlay.active {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.contact-info-top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contact-info-top h6 {
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.close-contact-info {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.close-contact-info svg {
+  transition: color 0.3s ease-in-out;
+}
+
+.close-contact-info:hover svg {
+  stroke: #00579b;
+}
+
+.contact-info-card button {
+  font-size: 14px;
+  font-weight: 500;
+  margin-top: 6px;
+}
+
+.contact-emails-wrapper,
+.contact-phones-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
   width: 100%;
 }
 
-.contract-form-card{
-  padding: 20px;
-  border: 1px solid #00579b;
-  border-radius: 10px;
-}
-
-.finish-operation{
+.contact-info-phones,
+.contact-info-emails {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  font-family: "Roboto", sans-serif;
-  margin: 20px 0px;
+  gap: 4px;
+  width: 100%;
 }
 
-.save-button{
-  padding: 8px 20px;
-  font-size: 15px;
-  border-radius: 7px;
-  background-color: rgb(0, 194, 0);
+.contract-form-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  background-color: #004a88;
+  color: white;
+  font-size: 16px;
+  padding: 10px 22px;
   border: none;
-  color: #f7f7f7;
-  text-transform: uppercase;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
 }
 
-.save-button:hover{
-  background-color: rgb(0, 132, 0);
+.contract-form-button:hover {
+  background-color: #003d6f;
 }
 
-.close-button{
-  padding: 8px 20px;
-  font-size: 15px;
-  border-radius: 7px;
-  background-color: #bc0000;
+.save-contact-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #0daf15;
+  color: white;
+  padding: 9px;
+  margin-top: 7px;
   border: none;
-  color: #f7f7f7;
-  gap: 10px;
-  text-transform: uppercase;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
 }
 
-.close-button:hover{
-  background-color: #7b0000;
+.save-contact-info:hover {
+  background-color: #099210;
+}
+
+.create-contact { 
+  margin-top: 14px;
+}
+.cant-edit {
+  font-size: 13px;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  color: #c10000;
+}
+
+.form-management-buttons {
+  display: flex;
+  gap: 6px;
+  margin-top: 8px;
+}
+
+.form-action-buttons {
+  display: flex;
+  gap: 8px;
+  margin-top: 15px;
+}
+
+.form-action-buttons button {
+  padding: 8px 10px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  color: white;
+  border: none;
+  border-radius: 7px;
+  font-size: 17px;
+  font-weight: 500;
+  transition: background-color 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.cancel-changes {
+  background-color: #c10000;
+}
+
+.cancel-changes:hover {
+  background-color: #9a0000;
+}
+
+.save-contract {
+  background-color: #0daf15;
+}
+
+.save-contract:hover {
+  background-color: #099210;
 }
 
 .pagination {
